// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Separator Default 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Default
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              This is the default configuration of this component. Visit Orbit.Kiwi for more detailed guidelines.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <hr
                className="Separator__StyledSeparator-sc-8j6gay-0 etnESt"
              />
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        &lt;
                        Separator
                      </span>
                      <span />
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Separator Playground 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Playground
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <hr
                className="Separator__StyledSeparator-sc-8j6gay-0 gOEJuR"
              />
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        &lt;
                        Separator
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            spaceAfter
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                largest
                              </span>
                              "
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
